<resources>
    <string name="app_name">JOLTT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="founder">Head of CuNow : Prajjwal Dubey is the founder of CuNow.where he oversees all functions of the business including engineering, product and operations. A designer at heart, prajjwal is known for balancing sharp design thinking with thoughtful product strategy to create experiences that bring people together and encourage authentic communication in Chandigarh University</string>
    <string name="introduction_d">d. If you fail to comply with these Terms or any other applicable terms or policies, we may suspend or terminate your App or account, as described below.</string>
    <string name="introduction_c">c. You must also comply with the applicable requirements in our Developer Policies and those made available on our Developer Site, including in our Documentation collectively, the “Developer Docs”)</string>
    <string name="introduction_b">b. To use Platform (including to Process any Platform Data), you agree to these Platform Terms (“Terms”), as well as all other applicable terms and policies. This may include the H.I.N.D.U Terms of Service, the CUNow Terms of Use, the H.I.N.D.U Commercial Terms, the Business Tools Terms, and any H.I.N.D.U Product terms that are applicable.</string>
    <string name="introduction_a">a. Our Platform is the set of APIs, SDKs, tools, plugins, code, technology, content, and services that enables others, including app developers and website operators, to develop functionality, retrieve data from H.I.N.D.U and any other H.I.N.D.U Products, or provide data to us.</string>
    <string name="co_founder">Sparsh Kumar, Shivam Rai, Ashutosh Chaubey: The team of CuNow. All we work in a team. We all are four members of strong programmer. We always work in the unity like a strong team. We all are the student of Chandigarh university of 1st year of CSE batch.</string>
    <string name="welcome_to_cunow">Welcome to Joltt,Spark Your Success</string>
    <string name="mail_message">We have sent a verification link to your email please verify your account using that link and then press REFRESH button</string>
    <string name="forgetPassword">We will send you password reset mail to your mail In case you didn\'t get/can\'t find it please check in <b>JUNK FOLDER</b> to.</string>
    <string name="email_verify_note">Note: If you didn\'t recieve the mail please refer to junk or spam folder of your inbox.</string>
    <string name="academics_help1">Subjects you add will appear here.\n To add new subject click on Add(+) button located below</string>
    <string name="namaste_welcome_to">Welcome to</string>
    <string name="lorem_sample">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="mystry_text">Keep checking Mysteries Will be closer then they appear here</string>
    <string name="title_activity_web_view2">WebView2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="founder_about_us">Head of JOLTT : Prajjwal Dubey is the founder of JOLTT.where he oversees all functions of the business including engineering, product and operations. A designer at heart, Prajjwal is known for balancing sharp design thinking with thoughtful product strategy to create experiences that bring people together and encourage authentic communication to all over the world</string>
    <string name="cofounder_aboutUs">Sparsh Kumar, Shivam Rai, Ashutosh Chaubey, Manish Yadav: The team of JOLTT. All we work in a team. We all are five members of strong programmer. We always work in the unity like a strong team. We all are the student of Chandigarh university of 3rd year of CSE batch.</string>
    <string name="introduction_aboutUs">a. JOLTT is a platform for users to post content, including photos, videos, comments, and other information. JOLTT provides social interactions between users who can post comments, likes, or other messages on a user\'s content. These interactions include direct messages between individual users, and disappearing messages. JOLTT\'s terms state they collect a broad range of personal information from people using the site, and about friends and contacts of people using JOLTT. JOLTT\'s terms state they use commercially reasonable safeguards to help secure a user\'s information collected through the service.</string>
    <string name="tnc_aboutUs">b. To use Platform (including to Process any Platform Data), you agree to these Platform Terms (“Terms”), as well as all other applicable terms and policies. This may include the H.I.N.D.U Terms of Service, the JOLTT Terms of Use, the H.I.N.D.U Commercial Terms, the Business Tools Terms, and any H.I.N.D.U Product terms that are applicable.</string>
    <string name="notice_about_us">c. You must also comply with the applicable requirements in our Developer Policies and those made available on our Developer Site, including in our Documentation collectively, the “Developer Docs”)</string>
    <string name="empty_feed">Your feed\'s looking light, but Exciting Features Awaits you!</string>
    <string name="source">The information displayed on our platform is sourced from various public domains, including but not limited to  <br>

    </br>education.gov.in, MYGOV, Department of Higher Education, National Informatics Center and other publicly accessible databases.</string>
</resources>